Fixing p overflow

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ div {
     margin: 20px 5px 20px 5px;
 }
 
+p {
+    margin:0px;
+
+}
+
 .top, .middle, .bottom {
     border: 5px solid white;
     border-radius: 10px;
